# slam-tracking-car

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  algorithm.md  export_pptx.py  lefthook.yml  presentation-script.md  presentation.html  presentation.html.artifact.json  presentation.pptx  project_analysis.md  pyproject.toml  report.docx  report.md  slam-tracking-car.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
_understand/: explore-workflow.md  navigation-workflow.md  note.md  person-tracking-workflow.md
app/: .gitignore  biome.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: br.lua  firmware.md  md2docx.sh  original.docx  overview.md  plantuml-tools.conf
docs/usecases/: UC-01.md  UC-02.md  UC-03.md  UC-04.md  analyze.md  template.md
firmware/: .env.example  .gitignore  platformio.ini
firmware/include/: config.h  config.h.example  encoders.h  imu.h  lidar.h  logger.h  motors.h  ros_bridge.h  safety.h  servos.h
firmware/scripts/: clean_ros_env.py  load_env.py  pio_isolated_build.sh
firmware/src/: cam_main.cpp  encoders.cpp  imu.cpp  lidar.cpp  logger.cpp  main.cpp  motors.cpp  ros_bridge.cpp  safety.cpp  servos.cpp
openspec/: config.yaml
src/slam_car_bringup/: package.xml
src/slam_car_interfaces/: CMakeLists.txt  package.xml
src/slam_car_interfaces/msg/: BoundingBox2D.msg  EnrolledPerson.msg  EnrollmentStatus.msg  TrackedPerson.msg  TrackedPersonArray.msg
src/slam_car_interfaces/srv/: AddPerson.srv  GetTrackingTarget.srv  ListMaps.srv  ListPersons.srv  LoadMap.srv  RemovePerson.srv  SetTrackingTarget.srv
(+190 files in other folders)
